# egui-pysync

./: Cargo.toml
src/: py_server.rs
tests/: fake_test.rs
