[workspace]
members = [
    "egui-pysync-server",
    "egui-pysync-client",
    "egui-pysync-transport",
    "egui-pysync-macros",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace.dependencies]
egui_pysync_transport = { path = "egui-pysync-transport" }
egui_pysync_macros = { path = "egui-pysync-macros" }

[package]
name = "test"
edition.workspace = true
version.workspace = true

[dependencies]
egui_pysync_server = {path = "egui-pysync-server"}
egui_pysync_client = {path = "egui-pysync-client"}
