[workspace]
members = [
    "egui-pyserver",
    "egui-pyclient",
    "egui-pytransport",
    "egui-pymacros",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"

[workspace.dependencies]
egui_pytransport = { path = "egui-pytransport" }
egui_pymacros = { path = "egui-pymacros" }

[package]
name = "test"
edition.workspace = true
version.workspace = true

[dependencies]
egui_pysync_server = {path = "egui-pysync-server"}
egui_pysync_client = {path = "egui-pysync-client"}
