[workspace]
members = [
    "egui-pyserver",
    "egui-pyclient",
    "egui-pysync",
    "egui-pymacros",
]
resolver = "2"

[workspace.package]
version = "0.2.4"
edition = "2021"

[workspace.dependencies]
egui_pysync = { path = "egui-pysync" }
egui_pymacros = { path = "egui-pymacros" }

[package]
name = "test"
edition.workspace = true
version.workspace = true

[dependencies]
egui_pysync_server = {path = "egui-pysync-server"}
egui_pysync_client = {path = "egui-pysync-client"}
